--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,174 +1,158 @@
-/*
-<weight>: Use a value from 100 to 900
-<uniquifier>: Use a unique and descriptive class name
-*/
-
-.raleway-900 {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 900;
-    font-style: normal;
-}
-
-.raleway-800 {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 800;
-    font-style: normal;
-}
-
-.raleway-700 {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-}
-
-.raleway-600 {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-}
-
-.raleway-500 {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: normal;
-}
-
-.raleway-400 {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-}
-
-.raleway-300 {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-}
-
-.raleway-200 {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 200;
-    font-style: normal;
-}
-
-.raleway-100 {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 100;
-    font-style: normal;
-}
-
 body {
     font-family: "Raleway", sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #000000;
 }
 
-h1, h2 {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-}
-
-
-
-.header{
-    width: 1280px;
+.header {
+    width: 100%;
     height: 73px;
-    background-color: black; 
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.header h1{
-color:white;
-margin: 0px;
-text-align: center;
+.header h1 {
+    color: white;
+    margin: 0;
+    text-align: center;
+    font-weight: 500;
+    font-size: 48px;
+    letter-spacing: 2px;
 }
 
-.banner{
-    width: 1280px;
-    height: 727px;
-    top: 73px;
-    background: transparent url('img/photo-1516008805996-d2abb468cc9a.png') 0% 0% no-repeat padding-box;
+.banner {
+    width: 100%;
+    max-height: none;
+    background-color: #000000;
+    overflow: hidden;
+}
+
+.banner img {
+    width: 100%;
+    height: auto;
+    max-height: 1000px;
+    object-fit: contain;
+    display: block;
+    margin: 0 auto;
 }
 
 .contenedor {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     gap: 20px;
-    max-width:1000px;
-    margin: auto;
-    padding:20px;
+    padding: 60px 10%;
     background-color: black;
     color: white;
+    max-width: 1280px;
+    margin: auto;
 }
+
 .texto {
-    width: 60%;
+    width: 45%;
+    font-weight: 200;
+    font-size: 19px;
+    line-height: 1.6;
+    height: auto;
+}
+
+.texto p:first-child {
+    margin-bottom: 10px;
 }
 
 .contenedor img {
-    width:35%;
-    max-width: 300px;
-}
-
-.div img{
-    width: 30%;
-    max-width: 200px;
-}
-
-body {
-    margin: 0px;
-}
-
-.flex {
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-    text-align: center;
-}
-
-.flex div {
-    display: flex;
-    flex-direction:column;
-    align-items: center;
-    gap: 10px;
-}
-
-.flex {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    flex-wrap: wrap;
-}
-.flex img {
-    width: 30%;
-    max-width: 250px;
+    width: 45%;
+    max-width: 600px;
 }
 
 .caracteristicas {
     background-color: #1E1A13;
-    padding: 20px;
+    padding: 60px 0 80px 0;
     text-align: center;
     color: white;
-    top: 1216px;
-    left: 464px;
+    width: 100%;
+}
+
+.caracteristicas h2 {
+    font-weight: 500;
+    font-size: 42px;
+    margin-bottom: 60px;
+    letter-spacing: 1px;
+}
+
+.caracteristicas .flex {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    padding: 0 20px;
+    background-color: #1E1A13;
+}
+
+.caracteristicas .flex div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    background-color: #1E1A13;
+}
+
+.caracteristicas i {
+    font-size: 80px;
+    color: white;
+}
+
+.caracteristicas p {
+    font-size: 22px;
+    font-weight: 300;
+    margin: 0;
+}
+
+section .flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    padding: 60px 10%;
+    background-color: #000000;
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+section .flex div {
+    flex: 1;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+section .flex img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 2px;
 }
 
 .footer {
-    height: 7em;
-    line-height: 3em;
+    height: auto;
     background-color: #1E1A13;
     color: white;
     text-align: center;
-    padding: 15px;
+    padding: 20px;
+    font-weight: 400;
+    font-size: 25px;
 }
 
 .footer a {
-    color: white
+    color: white;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    text-decoration: underline;
 }
 
